--- a/css/services.css
+++ b/css/services.css
@@ -66,8 +66,8 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 .container { 
-	height: 1400px;
-	width: 880px;
+	height: 1800px;
+	width: 890px;
 	margin: 0 auto;
 }
 
@@ -84,6 +84,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .navigationBar img {
+    margin-top: 10px;
 	align-self: center;
 	justify-self: flex-end;
 }
@@ -94,64 +95,134 @@ h1, h2, h3, h4, h5 {
 	color: grey;
 }
 
+/*Top IMG==================================================*/
+.topImg {
+	display: flex;
+}
+
 /*Header==================================================*/
 header {
 	width: 880px;
-	height: 450px;
+	height: 140px;
 	display: flex;
-	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 }
 
-.header h1 {
-	font-size: 70px;
-	margin: auto;
-	text-align: center;
+header h1 {
+	justify-self: flex-start;
+	font-size: 25px;
 }
 
-.header button{
+header p {
+	justify-self: flex-start;
+}
+
+/*Content==================================================*/
+
+.bigboibox {
+	width: 880px;
+	margin: 0px 0px 20px 0px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.bigboibox div {
+	border: 1px solid black;
+	margin: 25px 0px 20px 0px;
+	width: 420px;
+	height: 255px;
+	background-color: rgb(248, 248, 248);
+}
+
+.bigboibox div h1 {
+	margin: 25px 0px 0px 20px;
+}
+
+.bigboibox div p {
+	margin: 25px 35px 0px 20px;
+}
+
+.bigboibox div button {
 	border: 1px solid black;
 	border-radius: 5px;
-	width: 155px;
-	height: 30px;
+	margin: 25px 0px 0px 20px;
+	height: 36px;
+	width: 150px;
 }
 
-/*TopContent===============================================*/
-.topContent {
-	width: 880px;
-	height: 160px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.boi1 {
+	order: 1;
+
 }
 
-/*BodyIMG==================================================*/
-.bodyImg {
-	display: flex;
+.boi2 {
+	order: 3;
 }
 
-/*BottomContent============================================*/
-
-.bottomContent {
-	width: 880px;
-	height: 200px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.boi3 {
+	order: 5;
 }
 
-.divOne, .divTwo, .divThree {
-	width: 30%;
+.boi4 {
+	order: 2;
 }
 
-/*Contact=================================================*/
-.contactContent {
-	width: 880px;
-	height: 200px;
-	display: flex;
-	justify-content: flex-start;
-	flex-direction: column;
-	margin: 40px 0px 0px 0px;
+.boi5 {
+	order: 4;
+}
+
+.boi6 {
+	order: 6;
+}
+
+/*Content Pt.2==================================================*/
+.littleboibox {
+    width: 880px;
+    height: 370px;
+    display: flex;
+
+}
+
+.littleboibox div {
+    width: 50%;
+    margin: 30px 0px 0px 0px;
+}
+
+.one {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 47.5%;
+}
+
+.two {
+    display: flex;
+    width: 47.5%;
+    justify-content: flex-end;
+}
+
+.littleboibox div h1 {
+    font-size: 18px;
+}
+
+.littleboibox div p {
+    margin: 15px 0px 80px 0px;
+    font-size: 18px;
+}
+
+.littleboibox div ul {
+    padding-left: 17px;
+    font-size: 18px;
+}
+
+.littleboibox div ul li {
+    margin: 7px 0px 0px 0px;
+}
+
+.littleboibox div img {
 }
 
 /*Footer==================================================*/
@@ -159,5 +230,6 @@ footer {
 	justify-content: center;
 	align-content: flex-end;
 	display: flex;
-	color: grey;
+    color: grey;
+    margin: 90px 0px 30px 0px;
 }
