--- a/css/index.css
+++ b/css/index.css
@@ -66,10 +66,16 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 .container { 
-	height: 1400px;
+	height: 2000px;
 	width: 880px;
 	margin: 0 auto;
 }
+
+
+
+
+
+
 
 /*Navigation===============================================*/
 .navigationBar {
@@ -85,7 +91,8 @@ h1, h2, h3, h4, h5 {
 
 .navigationBar img {
 	align-self: center;
-	justify-self: flex-end;
+    justify-self: flex-end;
+    margin: 40px 0px 40px;
 }
 
 .navigationBar nav a {
@@ -160,4 +167,88 @@ footer {
 	align-content: flex-end;
 	display: flex;
 	color: grey;
+}
+
+/*Media Query===========================================*/
+
+/*Tablets*/
+@media only screen and (max-width: 800px) {
+    body {
+      background-color: lightblue;
+    }
+
+    .container {
+        width: 800px;
+    }
+
+    .navigationBar {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .navigationBar img {
+        order: 1;
+    }
+
+    .navigationBar nav {
+        order: 2;
+    }
+    
+    .navigationBar nav a {
+        color: grey;
+    }
+
+    /**/
+
+    header img {
+        display: none;
+    }
+    
+    header {
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 60px 0px 60px;
+    }
+    
+    .header h1 {
+        font-size: 70px;
+        margin: auto;
+        text-align: center;
+    }
+    
+    .header button{
+        border: 1px solid black;
+        border-radius: 5px;
+        width: 155px;
+        height: 30px;
+    }
+
+    /**/
+
+    .topContent {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .leftDiv {
+        width: 370px;
+        margin-left: 20px;
+    }
+
+    .rightDiv {
+        width: 370px;
+        margin-right: 20px;
+    }
+  }
+/*Mobile*/
+@media only screen and (max-width: 500px) {
+body {
+    background-color: pink;
+    }
+
+
 }
