--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,7 @@ h1, h2, h3, h4, h5 {
 .container { 
 	height: 1400px;
     width: 880px;
+    margin: auto;
 }
 
 /*Navigation===============================================*/
@@ -188,6 +189,7 @@ hr {
     .container {
         height: 1400px;
         width: 800px;
+        margin: 0px;
     }
 
     .bodyImg {
@@ -304,6 +306,7 @@ hr {
     .container {
     width: 500px;
     height: 2000px;
+    margin: 0px;
     }
 
     .navigationBar {
